--- a/Readme.org
+++ b/Readme.org
@@ -1,7 +1,8 @@
 * Requirement
 Python 3.6.4
 
-Qt 5.10.0_0
+PyQt 5.10.0_0 + WebEngine
+: $ sudo port install py36-pyqt5 +webengine
 
 ** pip
 #+BEGIN_SRC
